Final version homework streaming process

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,8 @@ logback_version=1.2.11
 kotlin.code.style=official
 exposed_version = 0.41.1
 postgres_version=42.6.0
+kafka_version=3.5.0
+coroutines_version=1.7.1
+atomicfu_version=0.20.2
+debezium_version=2.3.0.Final
+jackson_version=2.12.1
