--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ coroutines_version=1.7.1
 atomicfu_version=0.20.2
 debezium_version=2.3.0.Final
 jackson_version=2.12.1
+prometheus_version=1.11.1
+logback_appenders_version=1.8.8
+fluent_logger_version=0.3.4
