--- a/k8s/delivery/service.yaml
+++ b/k8s/delivery/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: delivery-service
+  labels:
+    app: delivery-app
 spec:
   selector:
     app: delivery-app
