--- a/k8s/billing/service.yaml
+++ b/k8s/billing/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: billing-service
+  labels:
+    app: billing-app
 spec:
   selector:
     app: billing-app
