--- a/k8s/notification/service.yaml
+++ b/k8s/notification/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: notification-service
+  labels:
+    app: notification-app
 spec:
   selector:
     app: notification-app
