--- a/k8s/order/ingress.yaml
+++ b/k8s/order/ingress.yaml
@@ -8,8 +8,7 @@ metadata:
 
 spec:
   rules:
-    - host: arch.homework
-      http:
+  - http:
         paths:
           - path: /order(/|$)(.*)
             pathType: Prefix
