--- a/k8s/order/service.yaml
+++ b/k8s/order/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: order-service
+  labels:
+    app: order-app
 spec:
   selector:
     app: order-app
