--- a/k8s/payment/service.yaml
+++ b/k8s/payment/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: payment-service
+  labels:
+    app: payment-app
 spec:
   selector:
     app: payment-app
