--- a/k8s/warehouse/service.yaml
+++ b/k8s/warehouse/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: warehouse-service
+  labels:
+    app: warehouse-app
 spec:
   selector:
     app: warehouse-app
